# ccc

./: .gitignore  .travis.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  azure-pipelines.yml  format.sh  opts.bzl
.ci/: clean.ps1  clean.sh  install-Linux.sh  install-Unix.sh  install-Windows.ps1  test-bazel.ps1  test-bazel.sh  test-make.sh
include/c/utils/: argc.h  panic.h
include/cc/utils/: constraint.h  scoped_invoker.h
include/ccc/container/: iterator.h  list.h  ownership.h  sdb.h
include/ccc/utils/: argc.h  bits.h  clog.h  compiletime.h  oo.h  panic.h  testing.h  tty.h
src/container/: sdb.c
src/utils/: argc.c
tests/: BUILD.bazel
tests/container/: list_test.c  ownership_test.c  sdb_test.c
tests/utils/: argc_test.c  bits_test.c  clog_test.c  oo_test.c  panic_test.c  panicf0_test.c  panicf_test.c  scoped_invoker_test.cc  testing_test.c
