# Author: tcath2s@gmail.com (Shylock Hg)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

load("//:opts.bzl",
    "COPTS_TEST",
    "LOPTS_TEST",
    "COPTS",
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "ccc",
    srcs = glob(["src/utils/*.c", "src/container/*.c"]),
    hdrs = glob(["include/ccc/utils/*.h", "include/ccc/container/*.h"]) ,
    includes = ["include"],
    copts = COPTS,
)

cc_library(
    name = "cccd",
    srcs = glob(["src/utils/*.c", "src/container/*.c"]),
    hdrs = glob(["include/ccc/utils/*.h", "include/ccc/container/*.h"]) ,
    includes = ["include"],
    copts = COPTS_TEST + COPTS,
    linkopts = LOPTS_TEST,
)
