load(
    "//:opts.bzl",
    "COPTS",
)

cc_test(
    name = "argc_test",
    srcs = ["utils/argc_test.c"],
    includes = ["include"],
    deps = ["//:ccc"],
    copts = COPTS,
)

cc_test(
    name = "clog_test",
    srcs = ["utils/clog_test.c"],
    includes = ["include"],
    deps = ["//:ccc"],
    copts = COPTS,
)

cc_test(
    name = "panic_test",
    srcs = ["utils/panic_test.c"],
    includes = ["include"],
    deps = ["//:ccc"],
    copts = COPTS,
)

cc_test(
    name = "panicf0_test",
    srcs = ["utils/panicf0_test.c"],
    includes = ["include"],
    deps = ["//:ccc"],
    copts = COPTS,
)

cc_test(
    name = "panicf_test",
    srcs = ["utils/panicf_test.c"],
    includes = ["include"],
    deps = ["//:ccc"],
    copts = COPTS,
)

cc_test(
    name = "bits_test",
    srcs = ["utils/bits_test.c"],
    includes = ["include"],
    deps = ["//:ccc"],
    copts = COPTS,
)

cc_test(
    name = "sdb_test",
    srcs = ["container/sdb_test.c"],
    includes = ["include"],
    deps = ["//:ccc"],
    copts = COPTS,
)

cc_test(
    name = "ownership_test",
    srcs = ["container/ownership_test.c"],
    includes = ["include"],
    deps = ["//:ccc"],
    copts = COPTS,
)

cc_test(
    name = "scoped_invoker_test",
    srcs = ["utils/scoped_invoker_test.cc"],
    includes = ["include"],
    deps = ["//:ccc", "@com_google_googletest//:gtest_main",],
)
